Fixes collapsed layout

--- a/app/client/stylesheets/bookmarks.css
+++ b/app/client/stylesheets/bookmarks.css
@@ -24,6 +24,7 @@ body > .content-inner {
   margin: 50px 0 0;
   padding: 0 15px;
   height: calc(100% - 80px);
+  width: 100%;
   overflow-y: hidden;
 }
 
@@ -216,6 +217,12 @@ body > .content-inner {
   height: 0 !important;
   top: 50% !important;
   left: 50% !important;
+}
+
+.list-group-item.loading {
+  height:100px;
+  width:100%;
+  line-height: 80px;
 }
 
 * {
